// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/settings.ts should handle UPDATE_SETTING 1`] = `
Object {
  "markOnClick": false,
  "openAtStartup": false,
  "participating": true,
  "patToken": "",
  "playSound": true,
  "showNotifications": true,
  "usePAT": false,
}
`;

exports[`reducers/settings.ts should handle UPDATE_SETTING 2`] = `
Object {
  "markOnClick": false,
  "openAtStartup": true,
  "participating": false,
  "patToken": "",
  "playSound": true,
  "showNotifications": true,
  "usePAT": false,
}
`;

exports[`reducers/settings.ts should return the initial state 1`] = `
Object {
  "markOnClick": false,
  "openAtStartup": false,
  "participating": false,
  "patToken": "",
  "playSound": true,
  "showNotifications": true,
  "usePAT": false,
}
`;
